--- a/small.html
+++ b/small.html
@@ -15,6 +15,19 @@
         <li id="cheese" class="yellow list-item">Cheese</li>
         <li id="burger">Burger</li>
     </ul>
+    
+    <script>
+        let header = document.querySelector('h1');
+        header.innerText = 'Toppings';
+
+        let burger = document.getElementById('burger');
+        burger.setAttribute('class', 'list-item');
+
+        const li = document.createElement('li');
+        li.innerText = 'Fries';
+        const ul = document.querySelector('#list');
+        ul.append(li);
+    </script>
 </body>
 
 </html>
